---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) -> pub [u8; 31] {
    let byte_array: [u8; 31] = x.to_be_bytes();
    let mut bytes: [u8; 31] = [0; 31];
    for i in 0..31 {
        bytes[i] = byte_array[i];
    }
    if ((bytes[30] != 60) | (bytes[29] != 33)) | (bytes[28] != 31) {
        assert(false);
    };
    assert(Field::from_be_bytes::<31>(bytes) == x);
    bytes
}
